@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-08T00:57:46Z",
+  "timestamp" : "2022-06-08T08:16:45Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 349,
-  "uniques" : 188,
+  "count" : 350,
+  "uniques" : 189,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
